<resources>

    <string name="app_name">UniGroup</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="apply_changes">Apply</string>

    <!-- Errors & Warnings -->
    <string name="password_incorrect_repeat">Your password repeat is not correct!</string>

    <!-- Login -->
    <string name="name_hint">Enter name</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="password_confirm_hint">Confirm password</string>
    <string name="btn_register">Register</string>
    <string name="btn_log_in">Log in</string>

    <!-- Menu -->
    <string name="exit_account">Exit account</string>
    <string name="delete_account">Delete account</string>
    <string name="profile_info">Profile info</string>
    <string name="title_tip">Tip</string>
    <string name="tip">For log in you don\'t have to complete name and password confirmation fields.</string>
    <string name="delete_all">Delete all</string>
    <string name="sort_by">Sort by…</string>
    <string name="sort_by_lastname">lastname</string>
    <string name="sort_by_name">name</string>
    <string name="sort_by_surname">surname</string>
    <string name="sort_clear">Clear sort</string>

    <!-- Main Activity -->
    <string name="btn_group_list">Group list</string>
    <string name="btn_send_all">Send email all</string>
    <string name="tv_copyrights">© maksimisu</string>

    <!-- Profile Activity -->
    <string name="profile_name">Profile name:</string>
    <string name="profile_email">Profile Email:</string>

    <!-- Students list -->
    <string name="std_list_id">List id:</string>
    <string name="std_birthday">Birthday:</string>
    <string name="std_email">Email:</string>
    <string name="std_phone">Phone:</string>
    <string name="add_student">Add student</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_list_id">List id</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_birthday">Birthday</string>

    <!-- Students profile -->
    <string name="btn_student_send_email">Send Email</string>
    <string name="btn_student_send_sms">Send SMS</string>
    <string name="btn_student_delete">Delete</string>
    <string name="btn_student_edit">Edit</string>
    <string name="btn_student_migrate">Migrate</string>

    <!-- Profile -->
    <string name="hint_name_changes">Enter new name</string>
    
    <!-- Edit student -->
    <string name="hint_new_lastname">Enter new lastname</string>
    <string name="hint_new_name">Enter new name</string>
    <string name="hint_new_surname">Enter new surname</string>
    <string name="hint_new_id">New list id</string>
    <string name="hint_new_email">Enter new email</string>
    <string name="hint_new_phone">Enter new phone</string>
    <string name="hint_new_birthday">Enter new birthday</string>

</resources>