<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionBack"
        android:icon="@drawable/ic_back"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionDeleteAll"
        android:title="@string/delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionProfileInfo"
        android:title="@string/profile_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionSortBy"
        android:title="@string/sort_by"
        app:showAsAction="never" >

        <menu>

            <item
                android:id="@+id/actionSortByLastname"
                android:title="@string/sort_by_lastname"
                app:showAsAction="never" />

            <item
                android:id="@+id/actionSortByName"
                android:title="@string/sort_by_name"
                app:showAsAction="never" />

            <item
                android:id="@+id/actionSortBySurname"
                android:title="@string/sort_by_surname"
                app:showAsAction="never" />

        </menu>

    </item>

    <item
        android:id="@+id/actionClearSort"
        android:title="@string/sort_clear"
        app:showAsAction="never" />

</menu>